# voiced

./: .gitignore  AGENTS.md  Makefile  README.md  audio.py  build-dotool.sh  config.example.json  daemon.py  install-service.sh  pyproject.toml  test.sh  test_transcriber.py  transcriber.py  typer.py  voiced
test-fixtures/: hello_world.expected
