[project]
name = "voiced"
version = "0.1.0"
description = "Voice transcription daemon"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper",
    "numpy",
    "sounddevice",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.rules]
# Enable stricter checks (promote warnings to errors)
possibly-unresolved-reference = "error"
unresolved-reference = "error"
invalid-argument-type = "error"
missing-argument = "error"
unknown-argument = "error"

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "all"
# Only ignore stubs for external libs that don't have them
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]
